@@ -974,3 +974,6 @@ and dummy mode.
 
 + Allow running simulation and dummy mode on the real time clock.
 
++ Bug fix: Sub-suites now load their own passphrase on start-up, not
+that of their parent suite.
+
